@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk): 
 ---------------------------- 
 
+- Call msLayerClose() before msLayerOpen() in the various query functions (#3692)
+
 - Use full list of epsg codes with inverted axis (#3582)
 
 - PHP/Mapscript: Added getResultsBounds() method in layer object (#2967)
